--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.6",
     "@types/jasmine": "~4.3.0",
+    "cypress": "^12.17.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
